--- a/TelegramCharts.xcodeproj/xcshareddata/xcschemes/TelegramCharts.xcscheme
+++ b/TelegramCharts.xcodeproj/xcshareddata/xcschemes/TelegramCharts.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "AC3B381A22365A70000AD635"
+               BuildableName = "TelegramChartsTests.xctest"
+               BlueprintName = "TelegramChartsTests"
+               ReferencedContainer = "container:TelegramCharts.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
